--- a/site-exemplo/estilo/style.css
+++ b/site-exemplo/estilo/style.css
@@ -1,7 +1,10 @@
-*body{
-    background-color: rgb(133, 133, 243) ;
+*{
+    
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
+}
+body{
+    background-color: rgb(133, 133, 243) ;
 }
 main{
     width: 750px;
